--- a/src/pages/fr/speakers.astro
+++ b/src/pages/fr/speakers.astro
@@ -2,7 +2,6 @@
 import { getCollection } from "astro:content";
 import { getRelativeLocaleUrl } from "astro:i18n";
 import Layout from "../../layouts/Layout.astro";
-import HeaderHero from "../../components/HeaderHero.astro";
 import type { CollectionEntry } from "astro:content";
 import Speaker from "../../components/Speaker.astro";
 
@@ -35,10 +34,7 @@ const schema = {
 
 <Layout title="Speakers" schema={schema}>
   <main>
-    <HeaderHero>
-      <span slot="title">Orateurs</span>
-    </HeaderHero>
-    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
+    <section class="max-w-screen-xl m-auto flex flex-col items-center px-8 py-12">
       <!-- <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Notre appel à speakers est ouvert jusqu'au 14 mars 2025
@@ -57,7 +53,7 @@ const schema = {
       </section>
       -->
       <ul
-        class="flex flex-wrap justify-center max-w-screen-lg mt-12 gap-x-32 gap-y-20 px-8"
+        class="flex flex-wrap justify-center gap-x-16 gap-y-16 md:gap-x-24 md:gap-y-20"
       >
         {
           speakers.map((speaker) => (
@@ -67,6 +63,7 @@ const schema = {
                   Astro.currentLocale!,
                   "/speaker/" + speaker.slug
                 )}
+                class="hover:opacity-80 transition-opacity"
               >
                 <Speaker speaker={speaker.data} />
               </a>
