--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -4,11 +4,11 @@ import { PARTENERS } from "../consts";
 
 {
   PARTENERS.length > 0 && (
-    <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-4 bg-white rounded-lg p-8 my-8">
+    <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-6 bg-base-200/50 rounded-lg p-8 border border-base-300/30">
       {PARTENERS.map((partener) => (
         <li>
-          <a href={partener.url} target="_blank">
-            <img src={partener.photos} alt={partener.name} class="w-24" />
+          <a href={partener.url} target="_blank" class="hover:opacity-70 transition-opacity">
+            <img src={partener.photos} alt={partener.name} class="w-24 h-auto" />
           </a>
         </li>
       ))}
