--- a/src/components/ProgramItem.astro
+++ b/src/components/ProgramItem.astro
@@ -27,7 +27,7 @@ const { Content } = await render(track);
                   )}
             <span class="text-xl">{track.data.name}</span>
         </h1>
-        <div class="flex flex-col gap-4 bg-gray-700 p-4 rounded-lg">
+        <div class="flex flex-col gap-4 bg-base-200 p-4 rounded-lg">
             <Content />
         </div>
         <ul class="flex flex-col md:flex-row gap-4 ml-6">
