--- a/src/components/Speaker.astro
+++ b/src/components/Speaker.astro
@@ -9,15 +9,15 @@ export interface Props {
 const { speaker } = Astro.props;
 ---
 
-<figure class="avatar flex flex-col items-center gap-2 max-w-44">
-  <div class="mask mask-squircle">
+<figure class="avatar flex flex-col items-center gap-3 max-w-44">
+  <div class="mask mask-squircle w-32 h-32">
     {
       speaker.image && (
-        <Image height={128} width={128} src={speaker.image} alt="" />
+        <Image height={128} width={128} src={speaker.image} alt={speaker.name} class="object-cover" />
       )
     }
   </div>
-  <figcaption class="flex flex-col items-center mt-4">
-    <h2 class="text-3xl text-center font-bold">{speaker.name}</h2>
+  <figcaption class="flex flex-col items-center mt-2">
+    <h2 class="text-2xl md:text-3xl text-center font-bold">{speaker.name}</h2>
   </figcaption>
 </figure>
