--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import HeaderHero from '../../components/HeaderHero.astro';
 import Crew from '../../components/Crew.astro';
 import { ADDRESS, SITE_DOMAIN, SITE_TITLE, SOCIAL_LINKS } from "../../consts";
 
@@ -77,10 +76,7 @@ const schema = {
 
 <Layout title="About" schema={schema}>
     <main>
-        <HeaderHero>
-            <span slot="title">About</span>
-        </HeaderHero>
-        <section class="max-w-screen-lg m-auto px-8">
+        <section class="max-w-screen-lg m-auto px-8 py-12">
             <h2 class="text-4xl font-bold my-12">The project</h2>
             <p>The NG Baguette Conference is a community-driven event focused on Angular. Our mission is to bring together developers to share knowledge, network, and grow together. Through engaging talks and networking opportunities, we aim to strengthen the Angular community in France and beyond while celebrating our shared passion for web development.</p>
             <h2 class="text-4xl font-bold my-12">The team</h2>
