--- a/src/pages/en/program.astro
+++ b/src/pages/en/program.astro
@@ -1,7 +1,6 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
-import HeaderHero from "../../components/HeaderHero.astro";
 import type { CollectionEntry } from "astro:content";
 import ProgramItem from "../../components/ProgramItem.astro";
 
@@ -36,10 +35,7 @@ const schema = {
 
 <Layout title="Program" schema={schema}>
   <main>
-    <HeaderHero>
-      <span slot="title">Program</span>
-    </HeaderHero>
-    <section class="max-w-screen-lg flex flex-col m-auto items-center px-8">
+    <section class="max-w-screen-lg flex flex-col m-auto items-center px-8 py-12">
       <!-- <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Notre appel à speakers est ouvert jusqu'au 14 mars 2025
