--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import HeaderHero from "../../components/HeaderHero.astro";
 import AgendaComponent from "../../components/Agenda.astro";
 import { CFP_LINK } from "../../consts";
 import {
@@ -70,10 +69,7 @@ const schema = {
 
 <Layout title="Programme" schema={schema}>
   <main>
-    <HeaderHero>
-      <span slot="title">Agenda</span>
-    </HeaderHero>
-    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
+    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8 py-12">
       <section class="flex flex-col items-center gap-4">
         {
           isAfterCFPOpenning() && !isAfterCFPClosing() && (
