--- a/src/pages/fr/speaker/[slug].astro
+++ b/src/pages/fr/speaker/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import { getCollection, render } from "astro:content";
 import { Image } from "astro:assets";
-import HeaderHero from "../../../components/HeaderHero.astro";
 import { SITE_TITLE } from "../../../consts";
 import Layout from "../../../layouts/Layout.astro";
 
@@ -36,23 +35,23 @@ const schema = {
 
 <Layout title={SITE_TITLE} schema={schema}>
   <main>
-    <HeaderHero>
-      <span slot="title">{speaker.name}</span>
-      {
-        speaker.image && (
-          <div slot="description" class="mask mask-squircle">
-            <Image
-              width={128}
-              height={128}
-              src={speaker.image}
-              alt={speaker.name}
-              class="w-32 h-32 mx-auto"
-            />
-          </div>
-        )
-      }
-    </HeaderHero>
-    <section class="mt-10 max-w-screen-lg m-auto px-8">
+    <section class="max-w-screen-lg m-auto px-8 py-12">
+      <div class="flex flex-col items-center mb-8">
+        {
+          speaker.image && (
+            <div class="mask mask-squircle mb-6">
+              <Image
+                width={128}
+                height={128}
+                src={speaker.image}
+                alt={speaker.name}
+                class="w-32 h-32"
+              />
+            </div>
+          )
+        }
+        <h1 class="text-4xl md:text-5xl font-bold text-center">{speaker.name}</h1>
+      </div>
       <Content />
       <div class="flex justify-center mt-4">
         {
